Use text-align:right default for rtl. Thanks mksof. Fixes #8472
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@16461 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid_rtl.css
+++ b/grid/resources/Grid_rtl.css
@@ -8,3 +8,7 @@
 .dijitRtl .dojoxGridContent {
 	float:left;
 }
+
+.dijitRtl .dojoxGridCell {
+	text-align:right;
+}
